--- a/_includes/page__meta.html
+++ b/_includes/page__meta.html
@@ -26,9 +26,11 @@
     {% if document.show_author and document.show_date and document.date or document.last_modified_at %}
       <span class="page__meta-sep"></span>
     {% endif %}
-    <span class="page__meta-author">
-      <strong><i class="fas fa-fw fa-user" aria-hidden="true"></i>Author: </strong>{{author}}
-    </span>
+    {% if document.show_author %}
+      <span class="page__meta-author">
+        <strong><i class="fas fa-fw fa-user" aria-hidden="true"></i>Author: </strong>{{author}}
+      </span>
+    {% endif %}
 
     {% if document.read_time and document.show_author or document.show_date and document.date or document.last_modified_at %}
       <span class="page__meta-sep"></span>
