--- a/_includes/page__hero_big.html
+++ b/_includes/page__hero_big.html
@@ -46,7 +46,7 @@
           <a href="{{ action.url | relative_url }}" class="btn btn--light-outline btn--large">{{ action.label | default: site.data.ui-text[site.locale].more_label | default: "Learn More" }}</a>
         {% endfor %}
       {% endif %}
-      <p class="page__lead"> </p>
+      <p class="page__lead"> HIIII </p>
       <p class="page__lead"> </p>
       <p class="page__lead"> </p>
       <p class="page__lead"> </p>
