--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -18,18 +18,17 @@
     {% include_cached skip-links.html %}
     {% include_cached masthead.html %}
 
+    <div class="initial-content">
+      {{ content }}
+    </div>
+
     {% if site.search == true %}
       <div class="search-content">
         {% include_cached search/search_form.html %}
       </div>
     {% endif %}
 
-    <div id="footer" class="page__footer">
-      <footer>
-        {% include footer/custom.html %}
-        {% include_cached footer.html %}
-      </footer>
-    </div>
+
 
     {% include scripts.html %}
 
