--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -178,7 +178,7 @@ body {
 
 .page__hero {
   position: relative;
-  margin-bottom: 2em;
+  margin-bottom: 0;
   @include clearfix;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
