--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -187,7 +187,7 @@ body {
 
   &--overlay {
     position: relative;
-    margin-bottom: 2em;
+    margin-bottom: 0;
     padding: 3em 0;
     @include clearfix;
     background-size: cover;
