--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -184,7 +184,7 @@ body {
   animation: $intro-transition;
   -webkit-animation-delay: 0.25s;
   animation-delay: 0.25s;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
 
   &--overlay {
@@ -192,7 +192,7 @@ body {
     margin-bottom: 0;
     padding: 3em 0;
     @include clearfix;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     -webkit-animation: $intro-transition;
