--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -46,10 +46,8 @@
   }
 }
 
-.footer-no-top-margin {
-  footer {
-    margin-top: 0;
-  }
+.no-top-margin {
+  margin-top: 0;
 }
 
 .page__footer-copyright {
