--- a/_layouts/homepic.html
+++ b/_layouts/homepic.html
@@ -24,7 +24,7 @@
       {% endif %}
     </div>
 
-    <div id="footer" class="page__footer no-top-margin">
+    <div id="footer" class="page__footer footer-no-top-margin">
       <footer>
         {% include footer/custom.html %}
         {% include_cached footer.html %}
