--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -49,7 +49,17 @@
 .footer-no-top-margin {
   .page__footer {
     @include clearfix;
-    margin-top: 0;
+    float: left;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    margin-top: 3em;
+    color: $muted-text-color;
+    -webkit-animation: $intro-transition;
+    animation: $intro-transition;
+    -webkit-animation-delay: 0.45s;
+    animation-delay: 0.45s;
+    background-color: $footer-background-color;
   }
 }
 
