--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -46,20 +46,47 @@
   }
 }
 
-.footer-no-top-margin {
-  .page__footer {
+.page__footer-no-top-margin {
+  @include clearfix;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%;
+  margin-top: 0;
+  color: $muted-text-color;
+  -webkit-animation: $intro-transition;
+  animation: $intro-transition;
+  -webkit-animation-delay: 0.45s;
+  animation-delay: 0.45s;
+  background-color: $footer-background-color;
+
+  footer {
     @include clearfix;
-    float: left;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
-    margin-top: 3em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2em;
+    max-width: 100%;
+    padding: 0 1em 2em;
+
+    @include breakpoint($x-large) {
+      max-width: $x-large;
+    }
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  .fas,
+  .fab,
+  .far,
+  .fal {
     color: $muted-text-color;
-    -webkit-animation: $intro-transition;
-    animation: $intro-transition;
-    -webkit-animation-delay: 0.45s;
-    animation-delay: 0.45s;
-    background-color: $footer-background-color;
   }
 }
 
