change overlay pic flex

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -30,11 +30,7 @@ body {
           flex-direction: column;
 }
 
-.initial-content {
-  flex: 1 0 auto;
-  // display: flex;
-}
-
+.initial-content,
 .search-content {
   flex: 1 0 auto;
 }
