change overlay pic flex

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -33,6 +33,7 @@ body {
 .initial-content,
 .search-content {
   flex: 1 0 auto;
+  display: inline-flex;
 }
 
 .page {
@@ -574,6 +575,30 @@ body {
 
     @include breakpoint($x-large) {
       padding-right: 0;
+    }
+  }
+}
+
+.wide2 {
+  .page {
+    float: left;
+    width: 100%;
+    @include breakpoint($large) {
+      padding-left: 0;
+    }
+
+    @include breakpoint($x-large) {
+      padding-left: 0;
+    }
+  }
+
+  .page__related {
+    @include breakpoint($large) {
+      padding-left: 0;
+    }
+
+    @include breakpoint($x-large) {
+      padding-left: 0;
     }
   }
 }
