change overlay pic flex

--- a/_layouts/homepic.html
+++ b/_layouts/homepic.html
@@ -18,7 +18,7 @@
     {% include_cached skip-links.html %}
     {% include_cached masthead.html %}
 
-    <div class="initial-content">
+    <div class="initial-content-flex">
       {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
         {% include page__hero.html %}
       {% endif %}
