--- a/_layouts/homepic.html
+++ b/_layouts/homepic.html
@@ -20,7 +20,7 @@
 
     <div class="initial-content-flex">
       {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
-        {% include page__hero.html %}
+        {% include page__hero-flex.html %}
       {% endif %}
     </div>
 
