--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -237,7 +237,7 @@ body {
     }
   }
 
-  &--overlay-flex {
+  &--overlayflex {
     flex: 1 1 auto;
     position: relative;
     margin-bottom: 0;
