--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -144,11 +144,11 @@ $base0f: #ff5370 !default;
    Breakpoints
    ========================================================================== */
 
-$small: 600px !default;
-$medium: 768px !default;
-$medium-wide: 900px !default;
-$large: 1024px !default;
-$x-large: 1280px !default;
+$small: 600px !default;  // 600px
+$medium: 700px !default;  // 768px
+$medium-wide: 800px !default;  // 900px
+$large: 900px !default;  // 1024px
+$x-large: 1024px !default;  // 1028px
 $max-width: $x-large !default;
 
 /*
