--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -42,6 +42,7 @@ $type-size-5: 1em !default; // ~16px
 $type-size-6: 0.8em !default; // ~12px
 $type-size-7: 0.7em !default; // ~11px
 $type-size-8: 0.625em !default; // ~10px
+$type-size-9: 0.55em !default;
 
 /* headline scale */
 $h-size-1: 1.563em !default; // ~25.008px
