--- a/_layouts/panorama.html
+++ b/_layouts/panorama.html
@@ -142,7 +142,7 @@
         </div>
         <div class="page__footer-copyright" {% if page.footer_text_color %}style="color: {{ page.footer_text_color }};"{% endif %}>
           &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} 
-          <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.
+          <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a>, <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a> &amp; <a href="https://hansenh.com" rel="nofollow">Hansen</a>.
         </div>
 
       </footer>
